--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -24,7 +24,7 @@ document.getElementById("btn").addEventListener("click", async () => {
 
   const { data, error } = await supabase
     .from("tabela_elektrykow")
-    .select("id, imie, nazwisko")
+    .select("id, imie, nazwisko, wojewodztwo, miasto, gwiazdki, status, email ")
     .limit(5);
 
   if (error) {
