--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -87,6 +87,17 @@ button{
   color:var(--muted);
   font-size:14px;
 }
+.stars{
+  color:#f5b301;
+  font-size:16px;
+  margin-top:4px;
+}
+.status{
+  font-size:13px;
+  margin-top:2px;
+  font-style:italic;
+  color:var(--muted);
+}
 </style>
 </head>
 
@@ -172,9 +183,9 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 
   const { data } = await supabase
     .from("tabela_elektrykow")
-    .select("imie,nazwisko,email,telefon")
-    .eq("wojewodztwo", wojId)
-    .eq("miasto", miastoId)
+    .select("imie,nazwisko,email,telefon,gwiazdki,status")
+    .eq("wojewodztwo_id", wojId)
+    .eq("miasto_id", miastoId)
 
   if(!data || data.length === 0){
     results.innerHTML = "Brak wyników"
@@ -189,6 +200,8 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       <div class="name">${e.imie} ${e.nazwisko}</div>
       <div class="small">${e.email}</div>
       <div class="small">${e.telefon}</div>
+      <div class="small">${e.gwiazdki}</div>
+      <div class="small">${e.status}</div>
     `
     results.appendChild(d)
   })
