--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -87,17 +87,6 @@ button{
   color:var(--muted);
   font-size:14px;
 }
-.stars{
-  color:#f5b301;
-  font-size:16px;
-  margin-top:4px;
-}
-.status{
-  font-size:13px;
-  margin-top:2px;
-  font-style:italic;
-  color:var(--muted);
-}
 </style>
 </head>
 
@@ -201,7 +190,8 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       <div class="small">${e.email}</div>
       <div class="small">${e.telefon}</div>
       <div class="small">${e.gwiazdki}</div>
-  
+      <div class="small">${e.status}</div>
+    `
     results.appendChild(d)
   })
 })
