--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -172,7 +172,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 
   const { data } = await supabase
     .from("tabela_elektrykow")
-    .select("imie,nazwisko,email,telefon,gwiazdki,status")
+    .select("imie,nazwisko,email,telefon")
     .eq("wojewodztwo_id", wojId)
     .eq("miasto_id", miastoId)
 
@@ -189,8 +189,6 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       <div class="name">${e.imie} ${e.nazwisko}</div>
       <div class="small">${e.email}</div>
       <div class="small">${e.telefon}</div>
-      <div class="small">${e.gwiazdki}</div>
-      <div class="small">${e.status}</div>
     `
     results.appendChild(d)
   })
@@ -199,3 +197,4 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 
 </body>
 </html>
+
