--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -172,7 +172,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 
   const { data } = await supabase
     .from("tabela_elektrykow")
-    .select("imie,nazwisko,email,telefon,gwiazdki")
+    .select("imie,nazwisko,email,telefon,gwiazdki,status")
     .eq("wojewodztwo", wojId)
     .eq("miasto", miastoId)
 
@@ -190,6 +190,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       <div class="small">${e.email}</div>
       <div class="small">${e.telefon}</div>
       <div class="small">${e.gwiazdki}</div>
+      <div class="small">${e.status}</div>
     `
     results.appendChild(d)
   })
