--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -211,7 +211,8 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
         <div class="small">${e.email}</div>
         <div class="small">${e.telefon}</div>
       </div>
-      <div class="stars">${"⭐".repeat(e.gwiazdki||0)}</div>
+      <div class="small">${e.gwiazdki}</div>
+      </div>
       <div class="status">✔</div>
     `
     results.appendChild(d)
